cache: Support more media art types than just 'album'

The media art storage spec
https://wiki.gnome.org/MediaArtStorageSpec#Identifiers specifies the
following possible values for prefix: 'album', 'artist', 'podcast',
'radio', 'track'.

This commit adds support for all of these except 'track', which will
currently raise a g_warning() if used to advise the caller that it is
not supported.

Rather than only supporting a fixed list of identifiers, any unknown
prefix is accepted and handled in the same way as 'artist', 'radio' and
'podcast' media art.

This commit also fixes
https://bugzilla.gnome.org/show_bug.cgi?id=705834 where the path for
'album' media art where artist == NULL was calculated incorrectly.